# minicalc

./: .gitignore  CMakeLists.txt
include/: lexer.hpp  parser.hpp
src/: lexer.cpp  main.cpp  parser.cpp
